python/BricolagemParser.py
# Generated from BricolagemParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BricolagemParser ( Parser ):

    grammarFileName = "BricolagemParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ProjetoMaker'", "'Nivel'", "'Tema'", 
                     "'ObjetivoEnsino'", "'ObjetivoAprendizagem'", "'ObjetivoPesquisa'", 
                     "'ObjetivoEducacional'", "'Atividades'", "'Avaliacao'", 
                     "'Recursos'", "'ConformidadeBNCC'", "'Descricao'", 
                     "'DuracaoMinutos'", "'Passos'", "'Criterios'", "'Instrumentos'", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "PROJETO_MAKER", "NIVEL", "TEMA", "OBJETIVO_ENSINO", 
                      "OBJETIVO_APRENDIZAGEM", "OBJETIVO_PESQUISA", "OBJETIVO_EDUCACIONAL", 
                      "ATIVIDADES", "AVALIACAO", "RECURSOS", "CONFORMIDADE_BNCC", 
                      "DESCRICAO", "DURACAOMINUTOS", "PASSOS", "CRITERIOS", 
                      "INSTRUMENTOS", "ABRE_CHAVE", "FECHA_CHAVE", "ABRE_PARENTESE", 
                      "FECHA_PARENTESE", "ABRE_COLCHETE", "FECHA_COLCHETE", 
                      "DOIS_PONTOS", "VIRGULA", "PONTO_VIRGULA", "ID", "NUMERO", 
                      "STRING", "WS" ]

    RULE_projetoMaker = 0
    RULE_listaElementos = 1
    RULE_elemento = 2
    RULE_nivel = 3
    RULE_tema = 4
    RULE_objetivosProjeto = 5
    RULE_objetivo = 6
    RULE_listaObjetivosEnsino = 7
    RULE_objetivoEnsino = 8
    RULE_idObjetivoEnsino = 9
    RULE_descricaoObjetivoEnsino = 10
    RULE_listaObjetivosAprendizagem = 11
    RULE_objetivoAprendizagem = 12
    RULE_idObjetivoAprendizagem = 13
    RULE_descricaoObjetivoAprendizagem = 14
    RULE_listaObjetivosPesquisa = 15
    RULE_objetivoPesquisa = 16
    RULE_idObjetivoPesquisa = 17
    RULE_descricaoObjetivoPesquisa = 18
    RULE_listaObjetivosEducacionais = 19
    RULE_objetivoEducacional = 20
    RULE_idObjetivoEducacional = 21
    RULE_descricaoObjetivoEducacional = 22
    RULE_atividadesProjeto = 23
    RULE_listaAtividades = 24
    RULE_atividade = 25
    RULE_nomeAtividade = 26
    RULE_listaComponentesAtividade = 27
    RULE_componenteAtividade = 28
    RULE_descricaoAtividade = 29
    RULE_duracaoAtividade = 30
    RULE_passosAtividade = 31
    RULE_passoAtividade = 32
    RULE_avaliacaoProjeto = 33
    RULE_listaComponentesAvaliacao = 34
    RULE_componenteAvaliacao = 35
    RULE_criteriosAvaliacao = 36
    RULE_criterioAvaliacao = 37
    RULE_instrumentosAvaliacao = 38
    RULE_instrumentoAvaliacao = 39
    RULE_recursosProjeto = 40
    RULE_recurso = 41
    RULE_conformidadeProjetoBNCC = 42
    RULE_idBNCC = 43

    ruleNames =  [ "projetoMaker", "listaElementos", "elemento", "nivel", 
                   "tema", "objetivosProjeto", "objetivo", "listaObjetivosEnsino", 
                   "objetivoEnsino", "idObjetivoEnsino", "descricaoObjetivoEnsino", 
                   "listaObjetivosAprendizagem", "objetivoAprendizagem", 
                   "idObjetivoAprendizagem", "descricaoObjetivoAprendizagem", 
                   "listaObjetivosPesquisa", "objetivoPesquisa", "idObjetivoPesquisa", 
                   "descricaoObjetivoPesquisa", "listaObjetivosEducacionais", 
                   "objetivoEducacional", "idObjetivoEducacional", "descricaoObjetivoEducacional", 
                   "atividadesProjeto", "listaAtividades", "atividade", 
                   "nomeAtividade", "listaComponentesAtividade", "componenteAtividade", 
                   "descricaoAtividade", "duracaoAtividade", "passosAtividade", 
                   "passoAtividade", "avaliacaoProjeto", "listaComponentesAvaliacao", 
                   "componenteAvaliacao", "criteriosAvaliacao", "criterioAvaliacao", 
                   "instrumentosAvaliacao", "instrumentoAvaliacao", "recursosProjeto", 
                   "recurso", "conformidadeProjetoBNCC", "idBNCC" ]

    EOF = Token.EOF
    PROJETO_MAKER=1
    NIVEL=2
    TEMA=3
    OBJETIVO_ENSINO=4
    OBJETIVO_APRENDIZAGEM=5
    OBJETIVO_PESQUISA=6
    OBJETIVO_EDUCACIONAL=7
    ATIVIDADES=8
    AVALIACAO=9
    RECURSOS=10
    CONFORMIDADE_BNCC=11
    DESCRICAO=12
    DURACAOMINUTOS=13
    PASSOS=14
    CRITERIOS=15
    INSTRUMENTOS=16
    ABRE_CHAVE=17
    FECHA_CHAVE=18
    ABRE_PARENTESE=19
    FECHA_PARENTESE=20
    ABRE_COLCHETE=21
    FECHA_COLCHETE=22
    DOIS_PONTOS=23
    VIRGULA=24
    PONTO_VIRGULA=25
    ID=26
    NUMERO=27
    STRING=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProjetoMakerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROJETO_MAKER(self):
            return self.getToken(BricolagemParser.PROJETO_MAKER, 0)

        def ABRE_COLCHETE(self):
            return self.getToken(BricolagemParser.ABRE_COLCHETE, 0)

        def listaElementos(self):
            return self.getTypedRuleContext(BricolagemParser.ListaElementosContext,0)


        def FECHA_COLCHETE(self):
            return self.getToken(BricolagemParser.FECHA_COLCHETE, 0)

        def getRuleIndex(self):
            return BricolagemParser.RULE_projetoMaker

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProjetoMaker" ):
                listener.enterProjetoMaker(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProjetoMaker" ):
                listener.exitProjetoMaker(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProjetoMaker" ):
                return visitor.visitProjetoMaker(self)
            else:
                return visitor.visitChildren(self)




    def projetoMaker(self):

        localctx = BricolagemParser.ProjetoMakerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_projetoMaker)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(BricolagemParser.PROJETO_MAKER)
            self.state = 89
            self.match(BricolagemParser.ABRE_COLCHETE)
            self.state = 90
            self.listaElementos()
            self.state = 91
            self.match(BricolagemParser.FECHA_COLCHETE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaElementosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elemento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BricolagemParser.ElementoContext)
            else:
                return self.getTypedRuleContext(BricolagemParser.ElementoContext,i)


        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(BricolagemParser.VIRGULA)
            else:
                return self.getToken(BricolagemParser.VIRGULA, i)

        def getRuleIndex(self):
            return BricolagemParser.RULE_listaElementos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaElementos" ):
                listener.enterListaElementos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaElementos" ):
                listener.exitListaElementos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaElementos" ):
                return visitor.visitListaElementos(self)
            else:
                return visitor.visitChildren(self)




    def listaElementos(self):

        localctx = BricolagemParser.ListaElementosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_listaElementos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.elemento()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 94
                self.match(BricolagemParser.VIRGULA)
                self.state = 95
                self.elemento()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BricolagemParser.RULE_elemento

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PNivelContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def nivel(self):
            return self.getTypedRuleContext(BricolagemParser.NivelContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPNivel" ):
                listener.enterPNivel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPNivel" ):
                listener.exitPNivel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPNivel" ):
                return visitor.visitPNivel(self)
            else:
                return visitor.visitChildren(self)


    class PRecursosProjetoContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def recursosProjeto(self):
            return self.getTypedRuleContext(BricolagemParser.RecursosProjetoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPRecursosProjeto" ):
                listener.enterPRecursosProjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPRecursosProjeto" ):
                listener.exitPRecursosProjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPRecursosProjeto" ):
                return visitor.visitPRecursosProjeto(self)
            else:
                return visitor.visitChildren(self)


    class PAtividadesProjetoContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atividadesProjeto(self):
            return self.getTypedRuleContext(BricolagemParser.AtividadesProjetoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPAtividadesProjeto" ):
                listener.enterPAtividadesProjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPAtividadesProjeto" ):
                listener.exitPAtividadesProjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPAtividadesProjeto" ):
                return visitor.visitPAtividadesProjeto(self)
            else:
                return visitor.visitChildren(self)


    class PTemaContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tema(self):
            return self.getTypedRuleContext(BricolagemParser.TemaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPTema" ):
                listener.enterPTema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPTema" ):
                listener.exitPTema(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPTema" ):
                return visitor.visitPTema(self)
            else:
                return visitor.visitChildren(self)


    class PAvaliacaoProjetoContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def avaliacaoProjeto(self):
            return self.getTypedRuleContext(BricolagemParser.AvaliacaoProjetoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPAvaliacaoProjeto" ):
                listener.enterPAvaliacaoProjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPAvaliacaoProjeto" ):
                listener.exitPAvaliacaoProjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPAvaliacaoProjeto" ):
                return visitor.visitPAvaliacaoProjeto(self)
            else:
                return visitor.visitChildren(self)


    class PConformidadeProjetoBNCCContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def conformidadeProjetoBNCC(self):
            return self.getTypedRuleContext(BricolagemParser.ConformidadeProjetoBNCCContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPConformidadeProjetoBNCC" ):
                listener.enterPConformidadeProjetoBNCC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPConformidadeProjetoBNCC" ):
                listener.exitPConformidadeProjetoBNCC(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPConformidadeProjetoBNCC" ):
                return visitor.visitPConformidadeProjetoBNCC(self)
            else:
                return visitor.visitChildren(self)


    class PObjetivosProjetoContext(ElementoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ElementoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def objetivosProjeto(self):
            return self.getTypedRuleContext(BricolagemParser.ObjetivosProjetoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPObjetivosProjeto" ):
                listener.enterPObjetivosProjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPObjetivosProjeto" ):
                listener.exitPObjetivosProjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPObjetivosProjeto" ):
                return visitor.visitPObjetivosProjeto(self)
            else:
                return visitor.visitChildren(self)



    def elemento(self):

        localctx = BricolagemParser.ElementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_elemento)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = BricolagemParser.PNivelContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.nivel()
                pass
            elif token in [3]:
                localctx = BricolagemParser.PTemaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.tema()
                pass
            elif token in [4, 5, 6, 7]:
                localctx = BricolagemParser.PObjetivosProjetoContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.objetivosProjeto()
                pass
            elif token in [8]:
                localctx = BricolagemParser.PAtividadesProjetoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.atividadesProjeto()
                pass
            elif token in [9]:
                localctx = BricolagemParser.PAvaliacaoProjetoContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.avaliacaoProjeto()
                pass
            elif token in [10]:
                localctx = BricolagemParser.PRecursosProjetoContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.recursosProjeto()
                pass
            elif token in [11]:
                localctx = BricolagemParser.PConformidadeProjetoBNCCContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 107
                self.conformidadeProjetoBNCC()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NivelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NIVEL(self):
            return self.getToken(BricolagemParser.NIVEL, 0)

        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)

        def STRING(self):
            return self.getToken(BricolagemParser.STRING, 0)

        def getRuleIndex(self):
            return BricolagemParser.RULE_nivel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNivel" ):
                listener.enterNivel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNivel" ):
                listener.exitNivel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNivel" ):
                return visitor.visitNivel(self)
            else:
                return visitor.visitChildren(self)




    def nivel(self):

        localctx = BricolagemParser.NivelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nivel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BricolagemParser.NIVEL)
            self.state = 111
            self.match(BricolagemParser.DOIS_PONTOS)
            self.state = 112
            self.match(BricolagemParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMA(self):
            return self.getToken(BricolagemParser.TEMA, 0)

        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)

        def STRING(self):
            return self.getToken(BricolagemParser.STRING, 0)

        def getRuleIndex(self):
            return BricolagemParser.RULE_tema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTema" ):
                listener.enterTema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTema" ):
                listener.exitTema(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTema" ):
                return visitor.visitTema(self)
            else:
                return visitor.visitChildren(self)




    def tema(self):

        localctx = BricolagemParser.TemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tema)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(BricolagemParser.TEMA)
            self.state = 115
            self.match(BricolagemParser.DOIS_PONTOS)
            self.state = 116
            self.match(BricolagemParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjetivosProjetoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objetivo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BricolagemParser.ObjetivoContext)
            else:
                return self.getTypedRuleContext(BricolagemParser.ObjetivoContext,i)


        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(BricolagemParser.VIRGULA)
            else:
                return self.getToken(BricolagemParser.VIRGULA, i)

        def getRuleIndex(self):
            return BricolagemParser.RULE_objetivosProjeto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjetivosProjeto" ):
                listener.enterObjetivosProjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjetivosProjeto" ):
                listener.exitObjetivosProjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjetivosProjeto" ):
                return visitor.visitObjetivosProjeto(self)
            else:
                return visitor.visitChildren(self)




    def objetivosProjeto(self):

        localctx = BricolagemParser.ObjetivosProjetoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_objetivosProjeto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.objetivo()
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self.match(BricolagemParser.VIRGULA)
                    self.state = 120
                    self.objetivo() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjetivoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BricolagemParser.RULE_objetivo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PObjetivosEducacionaisContext(ObjetivoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ObjetivoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJETIVO_EDUCACIONAL(self):
            return self.getToken(BricolagemParser.OBJETIVO_EDUCACIONAL, 0)
        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)
        def ABRE_COLCHETE(self):
            return self.getToken(BricolagemParser.ABRE_COLCHETE, 0)
        def listaObjetivosEducacionais(self):
            return self.getTypedRuleContext(BricolagemParser.ListaObjetivosEducacionaisContext,0)

        def FECHA_COLCHETE(self):
            return self.getToken(BricolagemParser.FECHA_COLCHETE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPObjetivosEducacionais" ):
                listener.enterPObjetivosEducacionais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPObjetivosEducacionais" ):
                listener.exitPObjetivosEducacionais(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPObjetivosEducacionais" ):
                return visitor.visitPObjetivosEducacionais(self)
            else:
                return visitor.visitChildren(self)


    class PObjetivosEnsinoContext(ObjetivoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ObjetivoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJETIVO_ENSINO(self):
            return self.getToken(BricolagemParser.OBJETIVO_ENSINO, 0)
        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)
        def ABRE_COLCHETE(self):
            return self.getToken(BricolagemParser.ABRE_COLCHETE, 0)
        def listaObjetivosEnsino(self):
            return self.getTypedRuleContext(BricolagemParser.ListaObjetivosEnsinoContext,0)

        def FECHA_COLCHETE(self):
            return self.getToken(BricolagemParser.FECHA_COLCHETE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPObjetivosEnsino" ):
                listener.enterPObjetivosEnsino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPObjetivosEnsino" ):
                listener.exitPObjetivosEnsino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPObjetivosEnsino" ):
                return visitor.visitPObjetivosEnsino(self)
            else:
                return visitor.visitChildren(self)


    class PObjetivosPesquisaContext(ObjetivoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ObjetivoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJETIVO_PESQUISA(self):
            return self.getToken(BricolagemParser.OBJETIVO_PESQUISA, 0)
        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)
        def ABRE_COLCHETE(self):
            return self.getToken(BricolagemParser.ABRE_COLCHETE, 0)
        def listaObjetivosPesquisa(self):
            return self.getTypedRuleContext(BricolagemParser.ListaObjetivosPesquisaContext,0)

        def FECHA_COLCHETE(self):
            return self.getToken(BricolagemParser.FECHA_COLCHETE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPObjetivosPesquisa" ):
                listener.enterPObjetivosPesquisa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPObjetivosPesquisa" ):
                listener.exitPObjetivosPesquisa(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPObjetivosPesquisa" ):
                return visitor.visitPObjetivosPesquisa(self)
            else:
                return visitor.visitChildren(self)


    class PObjetivosAprendizagemContext(ObjetivoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BricolagemParser.ObjetivoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJETIVO_APRENDIZAGEM(self):
            return self.getToken(BricolagemParser.OBJETIVO_APRENDIZAGEM, 0)
        def DOIS_PONTOS(self):
            return self.getToken(BricolagemParser.DOIS_PONTOS, 0)
        def ABRE_COLCHETE(self):
            return self.getToken(BricolagemParser.ABRE_COLCHETE, 0)
        def listaObjetivosAprendizagem(self):
            return self.getTypedRuleContext(BricolagemParser.ListaObjetivosAprendizagemContext,0)

        def FECHA_COLCHETE(self):
            return self.getToken(BricolagemParser.FECHA_COLCHETE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPObjetivosAprendizagem" ):
                listener.enterPObjetivosAprendizagem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPObjetivosAprendizagem" ):
                listener.exitPObjetivosAprendizagem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPObjetivosAprendizagem" ):
                return visitor.visitPObjetivosAprendizagem(self)
            else:
                return visitor.visitChildren(self)



    def objetivo(self):
